deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-poc-service
spec:
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 30810
    port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: react-poc
  type: NodePort
status:
  loadBalancer: {}
