deploy/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: react-poc-ingress
spec:
  backend:
    serviceName: react-poc-service
    servicePort: 80
